--- a/style.css
+++ b/style.css
@@ -108,15 +108,13 @@
     display: block;
     font-weight: 400;
     line-height: 1.3;
-    margin-bottom: 12px
-px
-;
+    margin-bottom: 12px;
 }
 
 .experience {
     background: #01FF56;
     padding: 60px 65px 20px 65px;
-    position: relative
+    position: relative;
 }
 
 .experience {
@@ -148,7 +146,6 @@ px
 /* Utility */
 .arput-tombol {
     font-family: chivo;
-    border-radius: 40px;
 }
 
 .arput-tombol-download {
@@ -175,7 +172,7 @@ px
     .nav-link:hover::after {
         content: '';
         display: block;
-        border-bottom: 3px solid black;
+        border-bottom: 3px solid green;
         width: 50%;
         margin: auto;
         padding-bottom: 5px;
@@ -192,13 +189,21 @@ px
         font-weight: 400;
     }
 
+    .arput-tombol-hire {
+      font-family: chivo;
+        height: 60px;
+        width: 180px;
+        padding-top: 16px;
+        background-color: #28a745;
+    }
+
     .arput-tombol-download {
         font-family: chivo;
         height: 60px;
         width: 180px;
         margin-top: 20px;
         margin-bottom: 30px;
-        padding-top: 15px;
+        padding-top: 16px;
         background-color: #01FF56;
     }
 
